# type_practice

./: README.md  dune-project  type_practice.opam
css/: style.css
lib/: char_info.ml  char_info.mli  dune  game.ml  game.mli  game_engine.ml  game_engine.mli  text_gen.ml  text_gen.mli  utils.ml  utils.mli
script/: main.js
test/: dune  test_type_practice.ml
view/: index.html
